syntax = "proto3";

package prompt;

import "github.com/havoc-io/mutagen/pkg/prompt/prompt.proto";

message PromptRequest{
    string prompter = 1;
    prompt.Prompt prompt = 2;
}

message PromptResponse{
    string response = 1;
}

service Prompting {
    rpc Prompt(PromptRequest) returns (PromptResponse) {}
}
